# CommoneBuilder

./: .gitignore  LICENSE  pyproject.toml
CommonBuillder/Android/: Adb.py
CommonBuillder/FileTools/: ConfigUtils.py  File.py
CommonBuillder/FileTools/Base/: Define.py  Variable.py
CommonBuillder/Ocr/: Ocr.py
