[project]
name = "commonbuilder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.20.0",
    "numpy>=2.3.4",
    "openai>=2.7.1",
    "opencv-python>=4.11.0.86",
    "paddleocr>=3.3.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]
